<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edtName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntpetname"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntspecies"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntgender"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntusername"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntownername"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/itim"
            android:hint="@string/hntcontact"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="163dp"
        android:fontFamily="@font/itim"
        android:text="@string/signup"
        android:textColor="@color/fontcolor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:background="@drawable/custom_button2"
        android:backgroundTint="@color/btncolor"
        android:fontFamily="@font/itim"
        android:text="Sign Up"
        android:textColor="@color/fontcolor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:textAllCaps="false"/>

    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/background"
        android:tint="@color/fontcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backicon" />

</androidx.constraintlayout.widget.ConstraintLayout>