<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".home">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="317dp"
        android:layout_height="396dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnappoint"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="@color/btncolor2"
            android:fontFamily="@font/itim"
            android:paddingLeft="24dp"
            android:text="@string/btnappointment"
            android:textAlignment="textStart"
            android:textColor="@color/fontcolor"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnshop"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="@color/btncolor2"
            android:fontFamily="@font/itim"
            android:paddingLeft="24dp"
            android:text="@string/btnpetshop"
            android:textAlignment="textStart"
            android:textColor="@color/fontcolor"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btndc"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="@color/btncolor2"
            android:fontFamily="@font/itim"
            android:paddingLeft="24dp"
            android:text="@string/btndaycare"
            android:textAlignment="textStart"
            android:textColor="@color/fontcolor"
            android:textSize="24sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnsalon"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="@color/btncolor2"
            android:fontFamily="@font/itim"
            android:paddingLeft="24dp"
            android:text="@string/btnsalon"
            android:textAlignment="textStart"
            android:textColor="@color/fontcolor"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="415dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/navigation_bar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnhome"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@drawable/navigation_bar"
            android:backgroundTint="#EFCEFF"
            android:elevation="8dp"
            android:src="@drawable/home"
            android:tint="@color/fontcolor"
            tools:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/btnnoti"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@drawable/navigation_bar"
            android:src="@drawable/alarmicon"
            android:tint="#FFFFFF"
            tools:srcCompat="@drawable/alarmicon" />

        <ImageButton
            android:id="@+id/btntips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/navigation_bar"
            android:src="@drawable/ideaicon"
            android:tint="#FFFFFF"
            tools:srcCompat="@drawable/ideaicon" />

        <ImageButton
            android:id="@+id/btnprofile"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@drawable/navigation_bar"
            android:src="@drawable/footprint"
            android:tint="#FFFFFF"
            tools:srcCompat="@drawable/footprint" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/itim"
        android:text="heloo"
        android:textColor="@color/fontcolor"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView40"
        app:srcCompat="@drawable/shopicon" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView41"
        app:srcCompat="@drawable/loveicon" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView42"
        app:srcCompat="@drawable/grooming" />

</androidx.constraintlayout.widget.ConstraintLayout>